--- a/exercicios/ex002/index.html
+++ b/exercicios/ex002/index.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paragrafos</title>
+    <style>
+        div#teste1{
+            background-color: gray;
+            width: 500px;
+            height: 500px;
+            
+        }
+        div#teste2{
+            background-color: red;
+            position: middle;
+            width: 200px;
+            height: 200px;
+        }
+    </style>
 </head>
 <body>
     <h1>Paragrafos e quebras de linha</h1>
@@ -37,5 +51,9 @@
         &#x1F596;
         &#x1F913;
     </p>
+
+    <div id="teste1">
+        <div id="teste2"></div>
+    </div>
 </body>
 </html>
